# neurogen

./: .gitignore  CLAUDE.md  NEUROGEN.md  NEUROGEN_AUTORESEARCH.md  NEUROGEN_EXPLORATION.md  NEUROGEN_LIVE_CA.md  NEUROGEN_PROJECT.md  NEUROGEN_TESTING.md  PROJECT_TRACKER.md  README.md  ROUND2_RESULTS.md  ROUND4_RESULTS.md  SUBSTACK_POST_3.md  TWITTER_THREAD.md  analysis.ipynb  analyze_125m.py  analyze_ablation.py  analyze_all.py  analyze_attention_entropy.py  analyze_entropy_100k.py  benchmark.py  ca_rules.py  evaluate_core.py  evaluate_quality.py  experiment_gradient.py  experiment_hessian.py  experiment_mechanism.py  generate_20_samples.py  generate_best_samples.py  generate_comparison.py  generated_samples.txt  interact.py  prepare.py  program.md  pyproject.toml  results.tsv  round2_runner.py  train.py  train_125m.py  train_r4.py  (+2 more)
autoresearch/: __init__.py  exp0_train.py  exp2_train.py  precompute_cooccur.py
docs/: autoresearch_plan.md
exploration/: __init__.py
gradient_results/: attention_entropy.json  attention_entropy_100k.json  exp1_window_sweep.json  exp2_decomposition.json  exp3_variance_reduction.json  generation_best_of_5.json  generation_metrics.json  hessian_sharpness.json  mechanism_disambiguation.json
neurogen/: __init__.py  config.py
outputs/: benchmark_20260318_191440.csv  benchmark_20260318_191440.md  benchmark_20260318_192137.csv  benchmark_20260318_192137.md  benchmark_20260318_193034.csv  benchmark_20260318_193034.md  benchmark_20260318_201534.csv  benchmark_20260318_201534.md  quality_20260318_192800.md  quality_over_time_20260318_192849.md  reference_bpb.json
papers/: developmental_constraints_transformer_training.md  neurogen.tex  substack_post_2.md
reports/: daily_log.md  writeup_outline.md
research/: __init__.py  agenda.py  agenda.yaml  auto_research.py  decision_engine.py  engine.py  experiment_generator.py  registry.py  report.py  results_store.py
results_125m/: baseline_s1337.json  baseline_s137.json  baseline_s256.json  baseline_s42.json  baseline_s789.json  window_power_4.0_s1337.json  window_power_4.0_s137.json  window_power_4.0_s256.json  window_power_4.0_s42.json  window_power_4.0_s789.json
samples/: all_20_samples.txt  best_of_5_comparison.txt
scripts/: analyze_weights.py  develop_weights.py  run_auto_research.py  run_benchmark.py  run_experiment.py  run_phase.py  train.py
tests/: conftest.py  test_analysis.py  test_auto_research.py  test_baselines.py  test_ca_engine.py  test_ca_init.py  test_data.py  test_device.py  test_eval.py  test_integration.py  test_live_ca.py  test_model.py  test_research_engine.py  test_trainer.py  test_windows.py
validation_results/: baseline_s1337.json  baseline_s137.json  baseline_s256.json  baseline_s42.json  baseline_s42_100k.json  baseline_s789.json  window_no_L0_s42.json  window_only_L01_s42.json  (+18 more)
(+80 files in other folders)
