[project]
name = "neurogen"
version = "0.1.0"
description = "Cellular Automata Developmental Initialization for Language Models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "datasets>=2.14.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
analysis = [
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "jupyter>=1.0.0",
]
dev = ["pytest>=7.4.0", "ruff>=0.1.0"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
